--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@imgly/background-removal": "^1.5.5",
+    "exifreader": "^4.23.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
