--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@imgly/background-removal": "^1.5.5",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "exifreader": "^4.23.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
